force-app/main/default/objects/Lease_Up_Potential__c/Lease_Up_Potential__c.object-meta.xml
<CustomObject>
    <label>Lease Up Potential</label>
    <nameField>
        <displayFormat>LUP-{0000000}</displayFormat>
        <label>Lease Up Potential Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Lease Up Potentials</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>