force-app/main/default/objects/Lease_Up_Potential__c/fields/Project_Acceptance__c.field-meta.xml
<CustomField>
    <fullName>Project_Acceptance__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project Acceptance</label>
    <referenceTo>Project_Acceptance__c</referenceTo>
    <relationshipLabel>Lease Up Potentials</relationshipLabel>
    <relationshipName>Lease_Up_Potentials</relationshipName>
    <type>Lookup</type>
</CustomField>